Update Dockerfile to remove unnecessary packages and streamline Java runtime build